<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_our_juet"
        android:textColor="@color/black"
        android:fontFamily="@font/productsansbold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:textSize="26sp"
        />

    <Spinner
        android:id="@+id/loginSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appName"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:drawSelectorOnTop="true"
        android:entries="@array/loginSpinner" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enrNumberHolder"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/loginSpinner"
        android:elevation="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enrNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/productsans"
            android:hint="@string/enrollment_number"
            android:inputType="textCapSentences|textCapWords|textCapCharacters" />
    </com.google.android.material.textfield.TextInputLayout>
    <!-- Password Label -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:elevation="30dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/enrNumberHolder"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/productsans"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dobHolder"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="30dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_below="@+id/passwordHolder"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/productsans"
            android:hint="@string/dd_mm_yyyy"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dobHolder"
        android:text="@string/begin"
        android:fontFamily="@font/productsansbold"
        android:layout_centerHorizontal="true"
        android:elevation="30dp"
        android:layout_marginTop="10dp"/>

</RelativeLayout>